<resources>
    <string name="app_name">Smarta åkband</string>
    <string name="title_activity_maps">Map</string>

    <string name="formats">Formats</string>
    <string name="choose_formats">Choose Formats</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="koppla_ett_band">Koppla ett band</string>
    <string name="v_lkommen">Välkommen!</string>
    <string name="plus">+</string>
    <string name="sp_ra_band">Spåra band</string>
    <string name="info_om_band">Tryck på namnet för att få mer information om bandet</string>
    <string name="band_information">Tryck på namnet för mer information om det kopplade bandet. Då kan du även byta namn eller koppla bort det.</string>
    <string name="map_information">Om du har fler namn än vad som syns i listan, bara skrolla horisontellt bland namnen för att hitta alla.</string>
    <string name="mina_kopplade_band">Mina kopplade band</string>
    <string name="lt"><![CDATA[<]]></string>
    <string name="bandets_batteri">Bandets batteri</string>
    <string name="_100">100%</string>
    <string name="tid_kvar_tills_batteriet_kopplas_bort">Tid kvar tills batteriet kopplas bort</string>
    <string name="_8h_20m">8h 20m</string>
    <string name="antal_uppkopplade_till_bandet">Antal uppkopplade till bandet</string>
    <string name="_1">1</string>
    <string name="byt_namn">Byt namn</string>
    <string name="koppla_bort">Koppla bort</string>
    <string name="map">map</string>
    <string name="sure">Är du säker på att du vill koppla bort Namn?</string>
    <string name="ja">Ja</string>
    <string name="nej">Nej</string>
    <string name="kopplar_band">Kopplar band…</string>
    <string name="skanna_qr_kod">Skanna QR-kod</string>
    <string name="koden_hittar_du_p_bandets_insida">Koden hittar du på bandets insida</string>
    <string name="namnge_band">Namnge band</string>
    <string name="namn">Namn…</string>
    <string name="ok">OK</string>
    <string name="avbryt">AVBRYT</string>
    <string name="l_gg_till_ett_band">Lägg till ett band</string>
    <string name="information">Information</string>
    <string name="visa_inte_det_h_r_meddelandet_igen">Visa inte det här meddelandet igen</string>
</resources>