<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/newName"
        android:text="@string/namnge_band"
        android:layout_marginBottom="20dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"/>

    <!-- Låter användaren namnge sitt kopplade band -->
    <EditText
        android:id="@+id/newName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:textAlignment="center"
        android:layout_centerInParent="true"
        android:background="@drawable/round"
        android:inputType="textCapSentences|text"
        android:textAllCaps="false"
        android:hint="@string/namn"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <!-- OK-knapp-->
    <TextView
        android:id="@+id/confirmNewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        android:text="@string/ok"/>

    <!-- Avbryt-knapp-->
    <TextView
        android:id="@+id/cancelNewName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@id/confirmNewName"
        android:layout_toLeftOf="@id/confirmNewName"
        android:layout_margin="20dp"
        android:textColor="#888"
        android:textSize="18sp"
        android:text="@string/avbryt"/>
</RelativeLayout>