<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <!-- Tillbaka-knapp -->
    <TextView
        android:id="@+id/backBtn"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="10dp"
        android:onClick="backButtonClick"
        android:text="@string/lt"
        android:textAlignment="center"
        android:textSize="25sp">

    </TextView>

    <!-- Bandets valda namn -->
    <TextView
        android:id="@+id/bandInfoName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textColor="@color/colorPrimary"
        android:textSize="36sp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bandInfoName"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/item_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp">

        <TextView
            android:id="@+id/bandInfoBatteryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/bandets_batteri"
            android:textColor="#333"
            android:textSize="18sp"/>

        <!-- Visar hur mycket tid batteriet har kvar -->
        <TextView
            android:id="@+id/bandInfoBattery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bandInfoBatteryText"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_100"
            android:textSize="32sp"/>

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@id/bandInfoBattery"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/bandInfoTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator"
            android:layout_centerHorizontal="true"
            android:text="@string/tid_kvar_tills_batteriet_kopplas_bort"
            android:layout_margin="5dp"
            android:textColor="#333"
            android:textSize="18sp"/>

        <!-- Visar hur mycket tid bandet har kvar -->
        <TextView
            android:id="@+id/bandInfoTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/bandInfoTimeText"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/_8h_20m"
            android:textSize="32sp"/>

        <View
            android:id="@+id/separator2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@id/bandInfoTime"
            android:background="@color/colorPrimary"/>

        <TextView
            android:id="@+id/bandInfoConnectedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/separator2"
            android:layout_centerHorizontal="true"
            android:text="@string/antal_uppkopplade_till_bandet"
            android:layout_margin="5dp"
            android:textColor="#333"
            android:textSize="18sp"/>

        <!-- Visar hur många som är uppkollade till bandet -->
        <TextView
            android:id="@+id/bandInfoConnected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/bandInfoConnectedText"
            android:layout_marginTop="10dp"
            android:text="@string/_1"
            android:textSize="32sp"/>

    </RelativeLayout>

    <!-- "Byt namn"-knapp -->
    <TextView
        android:id="@+id/changeNameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/disconnectBtn"
        android:layout_margin="30dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="changeName"
        android:padding="10dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/item_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp"
        android:text="@string/byt_namn"
        android:textColor="#000"
        android:textSize="18sp"/>

    <!-- "Koppla bort"-knapp-->
    <TextView
        android:id="@+id/disconnectBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="disconnect"
        android:padding="10dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/item_background"
        android:foreground="?android:attr/selectableItemBackground"
        android:elevation="2dp"
        android:text="@string/koppla_bort"
        android:textColor="#000"
        android:textSize="18sp"/>

</RelativeLayout>