<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <TextView
        android:id="@+id/connectedBandText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="15dp"
        android:text="@string/mina_kopplade_band"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"/>

    <!-- Kopplas till listan med de kopplade banden -->
    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/connectedBandText"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/mapBtnLayout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foregroundGravity="center"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <!-- Knapp till kartan -->
            <ImageButton
                android:id="@+id/mapBtn"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/round_button"
                android:scaleType="fitCenter"
                android:src="@drawable/map_icon"
                android:contentDescription="@string/map" />

            <TextView
                android:id="@+id/helpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sp_ra_band"
                android:textSize="14sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>